# tftds

./: meson.build
subprojects/cppnet/: meson.build
subprojects/cppnet/include/cppnet/: error.h  event.h  event_poller.h  interface_info.h  internet_address.h  ip_multicast.h  socket.h  time.h
subprojects/cppnet/src/: error.cpp  event.cpp  event_poller.cpp  interface_info.cpp  internet_address.cpp  ip_multicast.cpp  socket.cpp  time.cpp
tasks/: meson.build
tasks/integration/: common.h  integral.cpp  integral.h  master.cpp  meson.build  random_loss.cpp  random_loss.h  worker.cpp
tasks/raft/: client.py  nodes.py  raft_node.py  server.py  start_raft_node.sh  start_tests.sh  state_machine.py  tests.py
tasks/raft/rpc/: raft.proto  raft_pb2.py  raft_pb2.pyi  raft_pb2_grpc.py
